--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       opacity:.95;
       position:relative;
       z-index:1;
+      flex-wrap: wrap;
     }
     .pill{
       display:inline-flex;
@@ -152,7 +153,7 @@
       position:absolute;
       user-select:none;
       -webkit-tap-highlight-color: transparent;
-      z-index: 3; /* keeps buttons above decorative layers */
+      z-index: 3;
     }
     .btn:hover{ filter: brightness(1.03); }
 
@@ -205,28 +206,123 @@
       -webkit-backdrop-filter: blur(6px);
     }
     .overlay.show{ display:flex; }
+
     .modal{
-      width:min(720px, 92vw);
+      width:min(760px, 92vw);
       border-radius: 22px;
-      padding: 22px;
+      padding: 18px;
       background: rgba(255,255,255,.18);
       border: 1px solid rgba(255,255,255,.26);
       box-shadow: 0 30px 90px rgba(0,0,0,.30);
-      text-align:center;
       position:relative;
       overflow:hidden;
+      text-align:left;
     }
+
+    /* Scrollable content area inside modal */
+    .modal-scroll{
+      max-height: min(72vh, 560px);
+      overflow-y: auto;
+      padding: 14px 14px 6px;
+      border-radius: 16px;
+      background: rgba(0,0,0,.12);
+      border: 1px solid rgba(255,255,255,.16);
+    }
+
     .modal h2{
-      margin: 6px 0 10px;
-      font-size: clamp(28px, 4vw, 42px);
+      margin: 10px 0 12px;
+      font-size: clamp(24px, 3.6vw, 40px);
       text-shadow: 0 20px 40px rgba(0,0,0,.22);
+      text-align:center;
     }
+
     .modal p{
-      margin: 0 0 16px;
+      margin: 0 0 14px;
       font-size: clamp(15px, 2vw, 18px);
       line-height:1.6;
       opacity:.96;
+      text-align:center;
     }
+
+    .gif-stack{
+      display:grid;
+      gap: 12px;
+      margin: 14px 0 14px;
+    }
+    .gif-card{
+      border-radius: 16px;
+      overflow:hidden;
+      background: rgba(255,255,255,.10);
+      border: 1px solid rgba(255,255,255,.20);
+      box-shadow: 0 14px 40px rgba(0,0,0,.18);
+    }
+    .gif-card img{
+      width:100%;
+      display:block;
+      height:auto;
+    }
+
+    .unlock{
+      margin: 10px 0 16px;
+      padding: 12px 14px;
+      border-radius: 14px;
+      background: rgba(255,255,255,.12);
+      border: 1px solid rgba(255,255,255,.18);
+      text-align:center;
+      font-weight: 800;
+      letter-spacing:.2px;
+    }
+
+    .reconsider{
+      margin-top: 14px;
+      padding: 14px;
+      border-radius: 16px;
+      background: rgba(0,0,0,.12);
+      border: 1px solid rgba(255,255,255,.16);
+      text-align:center;
+    }
+    .reconsider h3{
+      margin: 0 0 10px;
+      font-size: 18px;
+      letter-spacing:.2px;
+    }
+
+    .reconsiderBtn{
+      appearance:none;
+      border:none;
+      cursor:pointer;
+      font-weight:900;
+      letter-spacing:.4px;
+      border-radius: 14px;
+      padding: 12px 16px;
+      font-size: 16px;
+      background: rgba(255,255,255,.22);
+      border: 1px solid rgba(255,255,255,.28);
+      color:#fff;
+      box-shadow: 0 16px 34px rgba(0,0,0,.18);
+      transition: transform .12s ease, filter .12s ease, opacity .12s ease;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .reconsiderBtn:hover{ filter: brightness(1.06); }
+    .reconsiderBtn:active{ transform: scale(.98); }
+
+    .tooLate{
+      display:none;
+      margin-top: 10px;
+      font-weight: 900;
+      letter-spacing:.2px;
+      padding: 10px 12px;
+      border-radius: 12px;
+      background: rgba(255,77,141,.22);
+      border: 1px solid rgba(255,255,255,.22);
+    }
+
+    .closeRow{
+      display:flex;
+      justify-content:center;
+      margin-top: 12px;
+    }
+
     .close{
       display:inline-flex;
       align-items:center;
@@ -305,14 +401,47 @@
     </div>
   </main>
 
+  <!-- Updated popup -->
   <div class="overlay" id="overlay" role="dialog" aria-modal="true" aria-label="Valentine accepted">
     <div class="modal">
-      <h2>YAAAY!! 💘💘💘</h2>
-      <p id="yesMessage">
-        PERSONALIZE_ME: You just made my whole heart do a happy dance.
-        I’m the luckiest person alive — I can’t wait to celebrate us. 🌹
-      </p>
-      <button class="close" id="closeBtn" type="button">Ok my Valentine 💖</button>
+      <h2>Good choice cuttuu 💘</h2>
+
+      <div class="modal-scroll" id="modalScroll">
+        <p>
+          I knew you would say yes. khi khi khii. 😌💞
+        </p>
+
+        <div class="gif-stack">
+          <div class="gif-card">
+            <img alt="Cute hug gif"
+              src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHJ0NHJ4Nmtja3RqbHQxeGptbGU2cHc5NDlwaTh3b2U5bDNycmkzdCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/BVoxkwdIwwnvc6cIRv/200w.gif">
+          </div>
+          <div class="gif-card">
+            <img alt="Cute kiss gif"
+              src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHJ0NHJ4Nmtja3RqbHQxeGptbGU2cHc5NDlwaTh3b2U5bDNycmkzdCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/JHxzdprX2FItgcpct5/200w.gif">
+          </div>
+          <div class="gif-card">
+            <img alt="Cute love gif"
+              src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExZHJ0NHJ4Nmtja3RqbHQxeGptbGU2cHc5NDlwaTh3b2U5bDNycmkzdCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/mHCxDxBp8DnTMAsJjc/200w.gif">
+          </div>
+        </div>
+
+        <div class="unlock">
+          You have now unlocked <b>unlimited hugs</b> 🤗 and <b>kisses</b> 😘
+        </div>
+
+        <div class="reconsider">
+          <h3>Want to reconsider? 😏</h3>
+
+          <button class="reconsiderBtn" id="reconsiderBtn" type="button">Yes</button>
+
+          <div class="tooLate" id="tooLate">Sorry too late cutess 😌💘</div>
+        </div>
+      </div>
+
+      <div class="closeRow">
+        <button class="close" id="closeBtn" type="button">Ok my Valentine 💖</button>
+      </div>
     </div>
   </div>
 
@@ -436,6 +565,10 @@
     yesBtn.addEventListener("click", () => {
       overlay.classList.add("show");
       startConfetti(2400);
+
+      // Always open popup scrolled to the top (so it looks clean)
+      const modalScroll = document.getElementById("modalScroll");
+      if(modalScroll) modalScroll.scrollTop = 0;
     });
 
     closeBtn.addEventListener("click", () => overlay.classList.remove("show"));
@@ -443,7 +576,24 @@
       if(e.target === overlay) overlay.classList.remove("show");
     });
 
-    // 4) Confetti (canvas)
+    // 4) Reconsider button: hover/tap makes it vanish + show message
+    const reconsiderBtn = document.getElementById("reconsiderBtn");
+    const tooLate = document.getElementById("tooLate");
+
+    function triggerTooLate(){
+      if(!reconsiderBtn || !tooLate) return;
+      reconsiderBtn.style.display = "none";
+      tooLate.style.display = "block";
+      tooLate.setAttribute("aria-hidden", "false");
+    }
+
+    // Hover (desktop)
+    reconsiderBtn.addEventListener("mouseenter", triggerTooLate);
+    // Tap (mobile) and keyboard focus
+    reconsiderBtn.addEventListener("touchstart", triggerTooLate, {passive:true});
+    reconsiderBtn.addEventListener("focus", triggerTooLate);
+
+    // 5) Confetti (canvas)
     const canvas = document.getElementById("confetti");
     const ctx = canvas.getContext("2d");
     let confettiParticles = [];
