--- a/index.html
+++ b/index.html
@@ -317,6 +317,111 @@
       border: 1px solid rgba(255,255,255,.22);
     }
 
+    /* ================= Envelope surprise ================= */
+    .envelope-wrap{
+      margin-top: 16px;
+      padding: 14px;
+      border-radius: 16px;
+      background: rgba(0,0,0,.10);
+      border: 1px solid rgba(255,255,255,.16);
+      text-align:center;
+    }
+
+    .envelope-title{
+      font-weight: 900;
+      letter-spacing:.2px;
+      margin-bottom: 10px;
+    }
+
+    .envelope-hint{
+      margin-top: 10px;
+      opacity: .9;
+      font-size: 13px;
+    }
+
+    .envelope{
+      position: relative;
+      width: min(360px, 86%);
+      height: 220px;
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      padding: 0;
+      outline: none;
+      -webkit-tap-highlight-color: transparent;
+      user-select:none;
+    }
+
+    .envelope-back{
+      position:absolute;
+      inset:0;
+      border-radius: 16px;
+      background: rgba(255,255,255,.14);
+      border: 1px solid rgba(255,255,255,.20);
+      box-shadow: 0 18px 50px rgba(0,0,0,.18);
+    }
+
+    .envelope-front{
+      position:absolute;
+      left: 0; right: 0; bottom: 0;
+      height: 62%;
+      border-radius: 0 0 16px 16px;
+      background: rgba(255,255,255,.18);
+      border: 1px solid rgba(255,255,255,.22);
+      border-top: none;
+      overflow:hidden;
+    }
+
+    .flap{
+      position:absolute;
+      left: 0; right: 0;
+      top: 0;
+      height: 56%;
+      transform-origin: top center;
+      border-radius: 16px 16px 10px 10px;
+
+      background: linear-gradient(180deg, rgba(255,255,255,.28), rgba(255,255,255,.12));
+      border: 1px solid rgba(255,255,255,.24);
+      border-bottom: none;
+
+      clip-path: polygon(0 0, 100% 0, 50% 90%);
+      transition: transform .45s ease;
+    }
+
+    .letter{
+      position:absolute;
+      left: 50%;
+      bottom: 14px;
+      width: 86%;
+      height: 78%;
+      border-radius: 14px;
+
+      background: rgba(255,255,255,.92);
+      color: #2a1b2d;
+      border: 1px solid rgba(0,0,0,.08);
+      box-shadow: 0 18px 40px rgba(0,0,0,.18);
+
+      /* start hidden inside envelope */
+      transform: translateX(-50%) translateY(46%);
+      transition: transform .6s cubic-bezier(.2,.9,.2,1);
+      overflow:hidden;
+    }
+
+    .letter-inner{
+      padding: 14px 14px 12px;
+      font-size: 14px;
+      line-height: 1.55;
+      text-align:center;
+      font-weight: 700;
+    }
+
+    .envelope.open .flap{
+      transform: rotateX(170deg);
+    }
+    .envelope.open .letter{
+      transform: translateX(-50%) translateY(-40%);
+    }
+
     .closeRow{
       display:flex;
       justify-content:center;
@@ -436,6 +541,30 @@
           <button class="reconsiderBtn" id="reconsiderBtn" type="button">Yes</button>
 
           <div class="tooLate" id="tooLate">Sorry too late cutess 😌💘</div>
+        </div>
+
+        <!-- Envelope surprise (NEW) -->
+        <div class="envelope-wrap" aria-label="Love note surprise">
+          <div class="envelope-title">One more tiny thing… 💌</div>
+
+          <button class="envelope" id="envelopeBtn" type="button" aria-expanded="false">
+            <div class="envelope-back"></div>
+
+            <div class="letter" id="letter">
+              <div class="letter-inner">
+                <p>
+                  Cuttuu, you’re my calm in the chaos and my favorite forever.<br/>
+                  Every day with you feels like home — soft, warm, and safe.<br/>
+                  Come here… you’ve earned unlimited hugs and kisses. 🤗😘
+                </p>
+              </div>
+            </div>
+
+            <div class="flap"></div>
+            <div class="envelope-front"></div>
+          </button>
+
+          <div class="envelope-hint" id="envelopeHint">Tap the envelope 😌</div>
         </div>
       </div>
 
@@ -566,7 +695,7 @@
       overlay.classList.add("show");
       startConfetti(2400);
 
-      // Always open popup scrolled to the top (so it looks clean)
+      // Always open popup scrolled to the top
       const modalScroll = document.getElementById("modalScroll");
       if(modalScroll) modalScroll.scrollTop = 0;
     });
@@ -587,13 +716,25 @@
       tooLate.setAttribute("aria-hidden", "false");
     }
 
-    // Hover (desktop)
     reconsiderBtn.addEventListener("mouseenter", triggerTooLate);
-    // Tap (mobile) and keyboard focus
     reconsiderBtn.addEventListener("touchstart", triggerTooLate, {passive:true});
     reconsiderBtn.addEventListener("focus", triggerTooLate);
 
-    // 5) Confetti (canvas)
+    // 5) Envelope open + letter slide out (NEW)
+    const envelopeBtn = document.getElementById("envelopeBtn");
+    const envelopeHint = document.getElementById("envelopeHint");
+
+    if(envelopeBtn){
+      envelopeBtn.addEventListener("click", () => {
+        const isOpen = envelopeBtn.classList.toggle("open");
+        envelopeBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+        if(envelopeHint){
+          envelopeHint.textContent = isOpen ? "Heheh now read it cutie 🥺💖" : "Tap the envelope 😌";
+        }
+      });
+    }
+
+    // 6) Confetti (canvas)
     const canvas = document.getElementById("confetti");
     const ctx = canvas.getContext("2d");
     let confettiParticles = [];
