--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       -webkit-backdrop-filter: blur(14px);
       position: relative;
       overflow:hidden;
+      z-index: 1;
     }
     .card:before{
       content:"";
@@ -350,6 +351,10 @@
       outline: none;
       -webkit-tap-highlight-color: transparent;
       user-select:none;
+
+      /* IMPORTANT: hides the letter until opened */
+      overflow: hidden;
+      perspective: 900px;
     }
 
     .envelope-back{
@@ -359,6 +364,7 @@
       background: rgba(255,255,255,.14);
       border: 1px solid rgba(255,255,255,.20);
       box-shadow: 0 18px 50px rgba(0,0,0,.18);
+      z-index: 1;
     }
 
     .envelope-front{
@@ -370,6 +376,7 @@
       border: 1px solid rgba(255,255,255,.22);
       border-top: none;
       overflow:hidden;
+      z-index: 4; /* pocket covers the letter when closed */
     }
 
     .flap{
@@ -386,6 +393,7 @@
 
       clip-path: polygon(0 0, 100% 0, 50% 90%);
       transition: transform .45s ease;
+      z-index: 3;
     }
 
     .letter{
@@ -396,15 +404,17 @@
       height: 78%;
       border-radius: 14px;
 
-      background: rgba(255,255,255,.92);
+      background: rgba(255,255,255,.94);
       color: #2a1b2d;
       border: 1px solid rgba(0,0,0,.08);
       box-shadow: 0 18px 40px rgba(0,0,0,.18);
 
-      /* start hidden inside envelope */
-      transform: translateX(-50%) translateY(46%);
+      /* CLOSED STATE: fully hidden inside the envelope */
+      transform: translateX(-50%) translateY(72%);
       transition: transform .6s cubic-bezier(.2,.9,.2,1);
       overflow:hidden;
+
+      z-index: 2;
     }
 
     .letter-inner{
@@ -415,11 +425,12 @@
       font-weight: 700;
     }
 
+    /* OPEN STATE */
     .envelope.open .flap{
       transform: rotateX(170deg);
     }
     .envelope.open .letter{
-      transform: translateX(-50%) translateY(-40%);
+      transform: translateX(-50%) translateY(-38%);
     }
 
     .closeRow{
@@ -470,6 +481,28 @@
       border-radius: 8px;
       color: #fff;
     }
+
+    /* Footer */
+    .footer{
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 12px;
+      z-index: 2;
+      padding: 8px 12px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.16);
+      border: 1px solid rgba(255,255,255,.22);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      box-shadow: 0 16px 40px rgba(0,0,0,.16);
+      font-size: 13px;
+      letter-spacing:.2px;
+      opacity: .95;
+      user-select:none;
+      pointer-events:none;
+      white-space: nowrap;
+    }
   </style>
 </head>
 <body>
@@ -506,7 +539,10 @@
     </div>
   </main>
 
-  <!-- Updated popup -->
+  <!-- Footer (NEW) -->
+  <div class="footer">made with love 💖 by cuttu ka bhandiii</div>
+
+  <!-- Popup -->
   <div class="overlay" id="overlay" role="dialog" aria-modal="true" aria-label="Valentine accepted">
     <div class="modal">
       <h2>Good choice cuttuu 💘</h2>
@@ -543,7 +579,7 @@
           <div class="tooLate" id="tooLate">Sorry too late cutess 😌💘</div>
         </div>
 
-        <!-- Envelope surprise (NEW) -->
+        <!-- Envelope surprise -->
         <div class="envelope-wrap" aria-label="Love note surprise">
           <div class="envelope-title">One more tiny thing… 💌</div>
 
@@ -720,7 +756,7 @@
     reconsiderBtn.addEventListener("touchstart", triggerTooLate, {passive:true});
     reconsiderBtn.addEventListener("focus", triggerTooLate);
 
-    // 5) Envelope open + letter slide out (NEW)
+    // 5) Envelope open + letter slide out
     const envelopeBtn = document.getElementById("envelopeBtn");
     const envelopeHint = document.getElementById("envelopeHint");
 
