--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
       border-radius: 16px;
       background: rgba(0,0,0,.12);
       border: 1px solid rgba(255,255,255,.16);
+      position: relative;
+      z-index: 1;
     }
 
     .modal h2{
@@ -281,6 +283,8 @@
       background: rgba(0,0,0,.12);
       border: 1px solid rgba(255,255,255,.16);
       text-align:center;
+      position: relative;
+      z-index: 2; /* below the note when it slides out */
     }
     .reconsider h3{
       margin: 0 0 10px;
@@ -318,7 +322,7 @@
       border: 1px solid rgba(255,255,255,.22);
     }
 
-    /* ================= Envelope surprise ================= */
+    /* ================= Envelope surprise (FIXED) ================= */
     .envelope-wrap{
       margin-top: 16px;
       padding: 14px;
@@ -326,6 +330,8 @@
       background: rgba(0,0,0,.10);
       border: 1px solid rgba(255,255,255,.16);
       text-align:center;
+      position: relative;
+      z-index: 5; /* gives its children a stacking advantage over earlier blocks */
     }
 
     .envelope-title{
@@ -351,86 +357,106 @@
       outline: none;
       -webkit-tap-highlight-color: transparent;
       user-select:none;
-
-      /* IMPORTANT: hides the letter until opened */
-      overflow: hidden;
       perspective: 900px;
+
+      /* CLOSED: hide everything that tries to peek outside */
+      overflow: hidden;
+    }
+    /* OPEN: allow note to come out above */
+    .envelope.open{
+      overflow: visible;
     }
 
-    .envelope-back{
+    /* OPAQUE envelope body */
+    .env-body{
       position:absolute;
       inset:0;
       border-radius: 16px;
-      background: rgba(255,255,255,.14);
-      border: 1px solid rgba(255,255,255,.20);
+      background: linear-gradient(180deg, #ffe6ef, #ffd3e2);
+      border: 1px solid rgba(255,255,255,.55);
       box-shadow: 0 18px 50px rgba(0,0,0,.18);
       z-index: 1;
     }
 
+    /* front pocket */
     .envelope-front{
       position:absolute;
       left: 0; right: 0; bottom: 0;
       height: 62%;
       border-radius: 0 0 16px 16px;
-      background: rgba(255,255,255,.18);
-      border: 1px solid rgba(255,255,255,.22);
-      border-top: none;
+      background: linear-gradient(180deg, #ffd7e6, #ffc3d9);
+      border-top: 1px solid rgba(255,255,255,.55);
+      z-index: 4;
       overflow:hidden;
-      z-index: 4; /* pocket covers the letter when closed */
+    }
+    /* subtle pocket triangle */
+    .envelope-front:before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background: linear-gradient(135deg, rgba(255,255,255,.25), transparent 55%);
+      clip-path: polygon(0 0, 50% 55%, 100% 0, 100% 100%, 0 100%);
+      opacity:.55;
     }
 
+    /* flap */
     .flap{
       position:absolute;
       left: 0; right: 0;
       top: 0;
-      height: 56%;
+      height: 58%;
       transform-origin: top center;
       border-radius: 16px 16px 10px 10px;
 
-      background: linear-gradient(180deg, rgba(255,255,255,.28), rgba(255,255,255,.12));
-      border: 1px solid rgba(255,255,255,.24);
+      background: linear-gradient(180deg, #fff0f6, #ffd1e2);
+      border: 1px solid rgba(255,255,255,.55);
       border-bottom: none;
 
       clip-path: polygon(0 0, 100% 0, 50% 90%);
       transition: transform .45s ease;
-      z-index: 3;
+      z-index: 5;
+      backface-visibility: hidden;
     }
 
+    /* The note (hidden inside by default) */
     .letter{
       position:absolute;
       left: 50%;
-      bottom: 14px;
-      width: 86%;
+      width: 88%;
       height: 78%;
       border-radius: 14px;
 
-      background: rgba(255,255,255,.94);
+      background: rgba(255,255,255,.97);
       color: #2a1b2d;
       border: 1px solid rgba(0,0,0,.08);
-      box-shadow: 0 18px 40px rgba(0,0,0,.18);
+      box-shadow: 0 22px 60px rgba(0,0,0,.24);
 
-      /* CLOSED STATE: fully hidden inside the envelope */
-      transform: translateX(-50%) translateY(72%);
-      transition: transform .6s cubic-bezier(.2,.9,.2,1);
-      overflow:hidden;
+      /* Start fully hidden inside (below pocket line) */
+      bottom: -35%;
+      transform: translateX(-50%);
+      opacity: 0;
+      transition: bottom .62s cubic-bezier(.2,.9,.2,1), opacity .22s ease;
 
-      z-index: 2;
+      /* IMPORTANT: make sure it overlays earlier content (like reconsider) */
+      z-index: 50;
+      pointer-events: none;
     }
 
     .letter-inner{
-      padding: 14px 14px 12px;
-      font-size: 14px;
-      line-height: 1.55;
+      padding: 16px 16px 14px;
+      font-size: 15px;
+      line-height: 1.65;
       text-align:center;
-      font-weight: 700;
+      font-weight: 800;
     }
 
-    /* OPEN STATE */
+    /* OPEN STATE: flap opens, note slides out from TOP */
     .envelope.open .flap{
       transform: rotateX(170deg);
     }
     .envelope.open .letter{
-      transform: translateX(-50%) translateY(-38%);
+      bottom: 48%;  /* pushes it up so it comes out through the top */
+      opacity: 1;
     }
 
     .closeRow{
@@ -539,7 +565,6 @@
     </div>
   </main>
 
-  <!-- Footer (NEW) -->
   <div class="footer">made with love 💖 by cuttu ka bhandiii</div>
 
   <!-- Popup -->
@@ -579,20 +604,19 @@
           <div class="tooLate" id="tooLate">Sorry too late cutess 😌💘</div>
         </div>
 
-        <!-- Envelope surprise -->
+        <!-- Envelope surprise (FIXED) -->
         <div class="envelope-wrap" aria-label="Love note surprise">
           <div class="envelope-title">One more tiny thing… 💌</div>
 
           <button class="envelope" id="envelopeBtn" type="button" aria-expanded="false">
-            <div class="envelope-back"></div>
+            <div class="env-body"></div>
 
+            <!-- Note (hidden until open, overlays everything when out) -->
             <div class="letter" id="letter">
               <div class="letter-inner">
-                <p>
-                  Cuttuu, you’re my calm in the chaos and my favorite forever.<br/>
-                  Every day with you feels like home — soft, warm, and safe.<br/>
-                  Come here… you’ve earned unlimited hugs and kisses. 🤗😘
-                </p>
+                Cuttuu, you’re my calm in the chaos and my favorite forever.<br/>
+                Every day with you feels like home — soft, warm, and safe.<br/>
+                Come here… you’ve earned unlimited hugs and kisses. 🤗😘
               </div>
             </div>
 
@@ -756,7 +780,7 @@
     reconsiderBtn.addEventListener("touchstart", triggerTooLate, {passive:true});
     reconsiderBtn.addEventListener("focus", triggerTooLate);
 
-    // 5) Envelope open + letter slide out
+    // 5) Envelope open + note slide out through top (fixed)
     const envelopeBtn = document.getElementById("envelopeBtn");
     const envelopeHint = document.getElementById("envelopeHint");
 
